minor css edits

--- a/style.css
+++ b/style.css
@@ -107,3 +107,25 @@ body {
   border-radius: 40px;
   height: 400px;
 }
+
+
+/*
+
+                                *
+
+                         *  _|_
+                         .-' * '-. *
+                        /       * \
+                     *  ^^^^^|^^^^^
+                         .~. |
+                        / ^ \|
+                       (|   |J
+                       '\   /
+             -- '' -'-'  ^`^  -'-- '' -'-' 
+Это пингвин Иннокентий. Пингвин Иннокентий очень застенчивый 
+и скромный пингвин. Он никогда не расскажет о тяжести его 
+жизни, того груза, что сдавливает его душу. Ему предстоит 
+ещё отстоять немало зим в полном одиночестве ради чего-то большего. 
+Позвольте ему находиться здесь...
+
+*/
